correct ocorrecia controller logic, making saved pacientes, dentistas and doencas selectable on the form template